# GTA

./: .gitignore  CMakeLists.txt  EBOOT.PBP  LICENSE  README.md
.github/workflows/: build.yml
src/: main.c
src/engine/: controls.c  controls.h  graphics.c  graphics.h  hud.c  hud.h  models.c  models.h  physics.c  physics.h  renderer.c  renderer.h  textures.c  textures.h
src/game/: achievements.c  achievements.h  ai.c  ai.h  ambulance.c  ambulance.h  arsenal.c  arsenal.h  audio.c  audio.h  boat.c  boat.h  border.c  border.h  carwash.c  casino.c  casino.h  characters.c  characters.h  cheats.c  cheats.h  checkpoint.c  checkpoint.h  classic_cars.c  classic_cars.h  clothing_shop.c  clothing_shop.h  combat.c  combat.h  coup_detat.c  cutscene.c  cutscene.h  dialogue.c  dialogue.h  driving.c  economy.c  economy.h  explosion.c  explosion.h  finale.c  (+85 more)
